--- a/index.html
+++ b/index.html
@@ -16,6 +16,263 @@
   <title>Viktor Alvar</title>
 </head>
 <body>
+<!--Navbar-->
+<div class="navbar">
+  <div class="container">
+    <div class="row">
+      <div class="menu--wrapper d-none d-lg-block col-md-12">
+        <nav>
+          <ul>
+            <li><a href="#hello">Hello</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="menu__wrapper col-md-12 d-lg-none">
+        <button type="button" class="menu__mobile-button">
+          <span>
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Navbar-->
 
+<!--Mobile Navbar-->
+<div class="mobile-menu d-lg-none">
+  <div class="container">
+    <div class="mobile-menu__close">
+      <span>
+        <i class="mdi mdi-close" aria-hidden="true"></i>
+      </span>
+    </div>
+    <nav class="mobile-menu__wrapper">
+      <ul>
+        <li><a href="#hello">Hello</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+<!--Mobile Navbar-->
+
+<!--Header-->
+<header class="main-header" style="background-image: url(images/img_bg_header.jpg)">
+  <div class="container">
+    <div class="row personal-profile">
+      <div class="col-md-4 personal-profile__avatar">
+        <img src="images/profile.png" alt="Profile Picture">
+      </div>
+      <div class="col-md-8">
+        <p class="personal-profile__name">Viktor Alvar</p>
+        <p class="personal-profile__work">Aspiring Junior Developer</p>
+        <div class="personal-profile__contacts">
+          <dl class="contact-list contact-list__opacity-titles">
+            <dt>Age:</dt>
+            <dd>20</dd>
+            <dt>Email:</dt>
+            <dd><a href="mailto:viktor.alvar@outlook.com">viktor.alvar@outlook.com</a></dd>
+            <dt>Location:</dt>
+            <dd>Vancouver, British Columbia</dd>
+          </dl>
+        </div>
+        <p class="personal-profile__social">
+          <a href="https://github.com/alvarviktor" target="_blank"><i class="fa fa-github"></i>github</a>
+          <a href="https://www.linkedin.com/in/viktor-alvar/" target="_blank"><i class="fa fa-linkedin-square"></i>linkedin</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</header>
+<!--Header-->
+
+<!--Hello-->
+<section id="hello" class="container section">
+  <div class="row">
+    <div class="col-md-10">
+      <h2 id="hello_header" class="section__title" style="text-indent: 0px;">Hi_</h2>
+      <p class="section__description">
+        Insert Description Here
+      </p>
+      <a href="documents/resume.pdf" class="section_btn site-btn">
+        <img src="images/img_btn_icon.png" alt="Image Button">
+        Download CV
+      </a>
+    </div>
+  </div>
+</section>
+<!--Hello-->
+
+<!--Resume-->
+<section id="resume" class="container section">
+  <div class="row">
+    <div class="col-md-10">
+      <h2 id="resume_header" class="section__title" style="text-indent: 0px;">Resume_</h2>
+      <p class="section__description">
+        Insert Description Here
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 section__resume resume-list">
+      <h3 class="resume-list_title">education</h3>
+      <div class="resume-list__block">
+        <p class="resume-list__block-title">British Columbia Institute of Technology</p>
+        <p class="resume-list__block-date">2017 - 2019</p>
+        <p>Computer Systems Technology - Data Communications Option</p>
+      </div>
+    </div>
+  </div>
+  <div class="row section__resume progress-list js-progress-list">
+    <div class="col-md-12">
+      <h3 class="progress-list__title">general skills</h3>
+    </div>
+    <div class="col-md-5 mr-auto">
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">Java</span>
+          <span class="progress-list__skill-value">70%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">C</span>
+          <span class="progress-list__skill-value">60%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">C++</span>
+          <span class="progress-list__skill-value">50%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">HTML</span>
+          <span class="progress-list__skill-value">80%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-5 mr-auto">
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">CSS</span>
+          <span class="progress-list__skill-value">70%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">JavaScript</span>
+          <span class="progress-list__skill-value">80%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">SQL</span>
+          <span class="progress-list__skill-value">60%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+      <div class="progress-list__skill">
+        <p>
+          <span class="progress-list__skill-title">Git</span>
+          <span class="progress-list__skill-value">70%</span>
+        </p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--Resume-->
+
+<!--Portfolio-->
+<section id="portfolio" class="container section">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 id="portfolio_header" class="section__title" style="text-indent: 0px;">My projects_</h2>
+    </div>
+  </div>
+  <div class="row portfolio-menu">
+    <div class="col-md-12">
+      <nav>
+        <ul>
+          <li>
+            <a href="" data-portfolio-target-tag="all" class="portfolio-menu__link--active">all</a>
+          </li>
+          <li>
+            <a href="" data-portfolio-target-tag="mobile apps" class="">mobile apps</a>
+          </li>
+          <li>
+            <a href="" data-portfolio-target-tag="websites" class="">websites</a>
+          </li>
+          <li>
+            <a href="" data-portfolio-target-tag="desktop apps" class="">desktop apps</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <div class="portfolio-cards">
+    <div class="row project-card" data-portfolio-tag="mobile apps" style="display: flex;">
+      <div class="col-md-6 col-lg-5 project-card__img">
+        <img src="" alt="Project Image" class="">
+      </div>
+      <div class="col-md-6 col-lg-7 project-card__info">
+        <h3 class="project-card__title">Project Title</h3>
+        <p class="project-card__description">
+          Insert Project Description
+        </p>
+        <p class="project-card__stack">Used stack:</p>
+        <ul class="tags">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
+        <a href="www.example.com" class="project-card__link">www.example.com</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!--Portfolio-->
+
+<!--Footer-->
+<footer>
+  <div>
+    <section class="copyright">Viktor Alvar © 2019</section>
+    <nav>
+    <a href="https://github.com/alvarviktor" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/viktor-alvar/" target="_blank">LinkedIn</a>
+    </nav>
+  </div>
+</footer>
+<!--Footer-->
 </body>
 </html>
