added project names

--- a/index.html
+++ b/index.html
@@ -235,33 +235,125 @@
         <nav>
           <ul>
             <li><a href="" data-portfolio-target-tag="all">all</a></li>
-            <li><a href="" data-portfolio-target-tag="mobile apps">mobile apps</a>
+            <li><a href="" data-portfolio-target-tag="mobile-apps">mobile apps</a>
             </li>
             <li><a href="" data-portfolio-target-tag="websites">websites</a></li>
-            <li><a href="" data-portfolio-target-tag="desktop apps">desktop apps</a></li>
+            <li><a href="" data-portfolio-target-tag="desktop-apps">desktop apps</a></li>
           </ul>
         </nav>
       </div>
     </div>
     <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-portfolio-tag="websites">
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="mobile-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
           <img class="" src="" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Example Project</h3>
+          <h3 class="project-card__title">Happy Days</h3>
           <p class="project-card__description">
             Project Description
           </p>
           <p class="project-card__stack">Used stack:</p>
           <ul class="tags">
-            <li>html5</li>
-            <li>css3</li>
-            <li>JavaScript</li>
-            <li>bower</li>
-            <li>grunt</li>
+            <li>Java</li>
+            <li>Android SDK</li>
           </ul>
-          <a href="" class="project-card__link">www.example.com</a>
+          <a href="" class="project-card__link">www.github-link.com</a>
+        </div>
+      </div>
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="websites">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">FreshFridge</h3>
+          <p class="project-card__description">
+            Project Description
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Node</li>
+            <li>Express</li>
+          </ul>
+          <a href="https://freshfridge2910.herokuapp.com" class="project-card__link">freshfridge2910.herokuapp.com</a>
+        </div>
+      </div>
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="mobile-apps">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">Android GPS</h3>
+          <p class="project-card__description">
+            Project Description
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>Java</li>
+            <li>Android SDK</li>
+            <li>Node</li>
+            <li>React</li>
+            <li>MongoDB</li>
+          </ul>
+          <a href="" class="project-card__link">www.github-link.com</a>
+        </div>
+      </div>
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="desktop-apps">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">File Transfer Application</h3>
+          <p class="project-card__description">
+            Project Description
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>C++</li>
+            <li>Win32</li>
+          </ul>
+          <a href="" class="project-card__link">www.github-link.com</a>
+        </div>
+      </div>
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="websites">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">BadgeBook</h3>
+          <p class="project-card__description">
+            Project Description
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>C#</li>
+            <li>.NET</li>
+            <li>SQLite</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <a href="" class="project-card__link">www.github-link.com</a>
+        </div>
+      </div>
+      <div class="row project-card" data-toggle="modal" data-portfolio-tag="desktop-apps">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">Chess Game</h3>
+          <p class="project-card__description">
+            Project Description
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>Java</li>
+            <li>JavaFX</li>
+          </ul>
+          <a href="https://github.com/alvarviktor/JavaFX-ChessGame" class="project-card__link">github.com/alvarviktor/JavaFX-ChessGame</a>
         </div>
       </div>
     </div>
