--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
   <link rel="manifest" href="images/favicon/site.webmanifest">
-  <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
-  <link href="https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/esm/popper-utils.js"></script>
 </head>
 
 <body>
@@ -244,7 +240,7 @@
       </div>
     </div>
     <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-portfolio-tag="mobile-apps">
+      <div class="row project-card" data-toggle="modal" data-target="#happyDaysModal" data-portfolio-tag="mobile-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
           <img class="" src="" alt="project-img">
         </div>
@@ -278,7 +274,7 @@
             <li>Node</li>
             <li>Express</li>
           </ul>
-          <a href="https://freshfridge2910.herokuapp.com" class="project-card__link">freshfridge2910.herokuapp.com</a>
+          <a href="https://github.com/AmyHong0502/FreshFridge" class="project-card__link">github.com/AmyHong0502/FreshFridge</a>
         </div>
       </div>
       <div class="row project-card" data-toggle="modal" data-portfolio-tag="mobile-apps">
@@ -360,6 +356,51 @@
   </section>
   <!--Portfolio-->
 
+<!--Portfolio Modal-->
+  <div class="modal fade portfolio-modal" id="happyDaysModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
+          <p class="portfolio-modal__title">Mobile and desktop app for London hostel store</p>
+          <img class="portfolio-modal__img" src="assets/img/img_project_1_mono.png" alt="modal_img">
+          <p class="portfolio-modal__description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt utlabore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum. Sed ut perspiciatis undeomnis iste natus error sit voluptatem accusantium doloremque
+            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+            dicta sunt explicabo.Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            conse.
+          </p>
+          <div class="portfolio-modal__link">
+            <a href="">www.superapp.com</a>
+          </div>
+          <div  class="portfolio-modal__stack">
+            <p class="portfolio-modal__stack-title">Using stack:</p>
+            <ul class="tags">
+              <li>html5</li>
+              <li>css3</li>
+              <li>JavaScript</li>
+              <li>bower</li>
+              <li>grunt</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--Portfolio Modal-->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
   <script src="scripts/menu.js"></script>
   <script src="scripts/progress-list.js"></script>
   <script src="scripts/section.js"></script>
