updated images higher res

--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
       <div class="col-md-12">
         <nav>
           <ul>
-            <li><a href="" data-portfolio-target-tag="all">all</a></li>
-            <li><a href="" data-portfolio-target-tag="mobile-apps">mobile apps</a>
+            <li><a data-portfolio-target-tag="all">all</a></li>
+            <li><a data-portfolio-target-tag="mobile-apps">mobile apps</a>
             </li>
-            <li><a href="" data-portfolio-target-tag="websites">websites</a></li>
-            <li><a href="" data-portfolio-target-tag="desktop-apps">desktop apps</a></li>
+            <li><a data-portfolio-target-tag="websites">websites</a></li>
+            <li><a data-portfolio-target-tag="desktop-apps">desktop apps</a></li>
           </ul>
         </nav>
       </div>
@@ -242,7 +242,7 @@
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#happyDaysModal" data-portfolio-tag="mobile-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_happydays_7.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Happy Days</h3>
@@ -259,7 +259,7 @@
       </div>
       <div class="row project-card" data-toggle="modal" data-target="#freshFridgeModal" data-portfolio-tag="websites">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_freshfridge_main.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">FreshFridge</h3>
@@ -279,7 +279,7 @@
       </div>
       <div class="row project-card" data-toggle="modal" data-target="#androidGpsModal" data-portfolio-tag="mobile-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_androidgps_main.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Android GPS</h3>
@@ -294,12 +294,12 @@
             <li>React</li>
             <li>MongoDB</li>
           </ul>
-          <a href="" class="project-card__link">www.github-link.com</a>
+          <a href="https://github.com/alvarviktor/AndroidGPS" class="project-card__link">github.com/alvarviktor/AndroidGPS</a>
         </div>
       </div>
       <div class="row project-card" data-toggle="modal" data-portfolio-tag="desktop-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_filetransfer_1.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">File Transfer Application</h3>
@@ -311,12 +311,12 @@
             <li>C++</li>
             <li>Win32</li>
           </ul>
-          <a href="" class="project-card__link">www.github-link.com</a>
+          <a href="https://github.com/alvarviktor/FileTransfer-ProtocolAnalysis" class="project-card__link">github.com/alvarviktor/FileTransfer-ProtocolAnalysis</a>
         </div>
       </div>
       <div class="row project-card" data-toggle="modal" data-portfolio-tag="websites">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_badgebook_main.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">BadgeBook</h3>
@@ -337,7 +337,7 @@
       </div>
       <div class="row project-card" data-toggle="modal" data-portfolio-tag="desktop-apps">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="" alt="project-img">
+          <img class="" src="images/projects/img_chessgame_main.PNG" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Chess Game</h3>
@@ -367,7 +367,7 @@
         </div>
         <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
           <p class="portfolio-modal__title">Mobile and desktop app for London hostel store</p>
-          <img class="portfolio-modal__img" src="assets/img/img_project_1_mono.png" alt="modal_img">
+          <img class="portfolio-modal__img" src="images/projects/img_happydays_main.png" alt="modal_img">
           <p class="portfolio-modal__description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt utlabore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex
