removed list of skills

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         </div>
       </div>
     </div>
-    <div class="row section__resume progress-list js-progress-list">
+
+    <!-- <div class="row section__resume progress-list js-progress-list">
       <div class="col-md-12">
         <h3 class="progress-list__title">general skills</h3>
       </div>
@@ -228,7 +229,8 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+  
   <!--Resume-->
 
   <!--Portfolio-->
