--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- End Navbar Section -->
 
   <!-- Start Header Section -->
-  <header id="home">
+  <header class="page-section" id="home">
     <div class="header-container">
       <h1 class="head-title">Hi my name is <b>Viktor Alvar</b></h1>
       <h3 class="head-subtitle">Full Stack Web Developer</h3>
@@ -36,37 +36,37 @@
   <!-- End Header Section -->
 
   <!-- Start About Me Section -->
-  <section id="about-me">
+  <section class="page-section" id="about-me">
     <header id="about-me-header">
-      <h1>About Me:</h1>
+      <h1 class="section-title">About Me:</h1>
     </header>
     <div id="about-me-container">
       <div id="about-me-image">
-        <img src="" alt="">
+        <img src="/public/images/img_profile.png" alt="profile image">
       </div>
       <div id="about-me-external-links-container">
         <ul>
           <li>
-            <a href="">
-              <i>GitHub Icon</i>
+            <a href="https://github.com/alvarviktor" target="_blank">
+              <img src="/public/images/icon-github-square.svg" alt="github icon">
               <span>github.com/alvarviktor</span>
             </a>
           </li>
           <li>
-            <a href="">
-              <i>LinkedIn Icon</i>
+            <a href="https://linkedin.com/in/viktor-alvar" target="_blank">
+              <img src="/public/images/icon-linkedin-square.svg" alt="linkedin icon">
               <span>linkedin.com/in/viktor-alvar</span>
             </a>
           </li>
           <li>
-            <a href="">
-              <i>Email Icon</i>
+            <a href="mailto:viktor.alvar@outlook.com">
+              <img src="/public/images/icon-material-email.svg" alt="email icon">
               <span>viktor.alvar@outlook.com</span>
             </a>
           </li>
           <li>
             <a href="">
-              <i>Location Icon</i>
+              <img src="/public/images/icon-material-location.svg" alt="location icon">
               <span>Vancouver, British Columbia</span>
             </a>
           </li>
@@ -147,7 +147,7 @@
   <!-- End About Me Section -->
 
   <!-- Start Portfolio Section -->
-  <section id="portfolio">
+  <section class="page-section" id="portfolio">
     <header id="portfolio-header">
       <h1>Portfolio:</h1>
     </header>
@@ -270,7 +270,7 @@
   <!-- End Portfolio Section -->
 
   <!-- Start Portfolio Modals Section -->
-  <section id="portfolio-modals">
+  <section class="page-section" id="portfolio-modals">
     <div class="modal">
       <div class="modal-container">
         <a href=""><svg>close_button</svg></a>
