--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portfolio Wireframe</title>
 </head>
 <body>
-  <nav id="navbar">
+  <nav class="navbar">
     <div class="switch-toggle">
       <label class="switch">
         <input type="checkbox" checked>
@@ -30,14 +30,12 @@
     </div>
   </header>
   <section class="page-section" id="about-me">
-    <header id="about-me-header">
+    <header class="about-me-header">
       <h1 class="section-title">About Me:</h1>
     </header>
-    <div id="about-me-container">
-      <div id="about-me-image">
-        <img src="/public/images/img_profile.png" alt="profile image">
-      </div>
-      <div id="about-me-external-links-container">
+    <div class="about-me-container">
+      <img class="about-me-image" src="/public/images/img_profile.png" alt="profile image">
+      <div class="about-me-external-links-container" class="about-me-container">
         <ul>
           <li>
             <a href="https://github.com/alvarviktor" target="_blank">
@@ -66,10 +64,10 @@
         </ul>
         <button class="action-button">download resume</button>
       </div>
-      <div id="about-me-blurb">
+      <div class="about-me-blurb" class="about-me-container">
         <p>Hi my name is Viktor, I am a full-stack web developer who loves to create websites. From the front-end to the back-end, the process of creating and sharing websites to the world motivates me. I love working in a team and collaborating with others to reach a common goal. My curious and driven mindset helps me improve my skills as a software developer, always looking to challenge myself and learn new things.</p>
       </div>
-      <div id="about-me-skills">
+      <div class="about-me-skills" class="about-me-container">
         <div class="skills-container">
           <h3>Programming Languages:</h3>
           <ul>
@@ -95,9 +93,9 @@
         </div>
         <div></div>
       </div>
-      <div id="about-me-experience">
+      <div class="about-me-experience">
         <h2>Experience</h2>
-        <div id="experience-purposely">
+        <div class="experience-purposely">
           <div class="">
             <h3>Purposely</h3>
             <h4>Software Developer Intern</h4>
@@ -113,9 +111,9 @@
           </ul>
         </div>
       </div>
-      <div id="about-me-education">
+      <div class="about-me-education">
         <h2>Education</h2>
-        <div id="education-bcit">
+        <div class="education-bcit">
           <div>
             <h3>British Columbia Institute of Technology</h3>
             <h3>Computer Systems Technology Diploma</h3>
@@ -125,7 +123,7 @@
             <h4>September 2017 - May 2019</h4>
           </div>
         </div>
-        <div id="education-kwantlenpark">
+        <div class="education-kwantlenpark">
           <div>
             <h3>Kwantlen Park Secondary School</h3>
           </div>
@@ -138,12 +136,12 @@
     </div>
   </section>
   <section class="page-section" id="portfolio">
-    <header id="portfolio-header">
+    <header class="portfolio-header">
       <h1>Portfolio:</h1>
     </header>
-    <nav id="portfolio-nav"></nav>
-    <div id="portfolio-container">
-      <div class="portolio-project-container" id="happy-days">
+    <nav class="portfolio-nav"></nav>
+    <div class="portfolio-container">
+      <div class="portolio-project-container happy-days">
         <h2 class="project-title">Happy Days</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
@@ -160,7 +158,7 @@
           <a href="https://github.com/KiaanCastillo/Happy-Days">GitHub Icon</a>
         </div>
       </div>
-      <div class="portolio-project-container" id="freshfridge">
+      <div class="portolio-project-container freshfridge">
         <h2 class="project-title">FreshFridge</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
@@ -181,7 +179,7 @@
           <a href="https://github.com/AmyHong0502/FreshFridge">GitHub Icon</a>
         </div>
       </div>
-      <div class="portolio-project-container" id="android-gps">
+      <div class="portolio-project-container android-gps">
         <h2 class="project-title">Android GPS</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
@@ -201,7 +199,7 @@
           <a href="https://github.com/alvarviktor/AndroidGPS">GitHub Icon</a>
         </div>
       </div>
-      <div class="portolio-project-container" id="file-transfer">
+      <div class="portolio-project-container file-transfer">
         <h2 class="project-title">File Transfer Application</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
@@ -218,7 +216,7 @@
           <a href="https://github.com/alvarviktor/FileTransfer-ProtocolAnalysis">GitHub Icon</a>
         </div>
       </div>
-      <div class="portolio-project-container" id="badgebook">
+      <div class="portolio-project-container badgebook">
         <h2 class="project-title">BadgeBook</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
@@ -238,7 +236,7 @@
         <div class="external-links">
         </div>
       </div>
-      <div class="portolio-project-container" id="java-chess">
+      <div class="portolio-project-container java-chess">
         <h2 class="project-title">Chess Game</h2>
         <img src="" alt="happy-days-image" class="project-image">
         <p class="project-description">
