added css colour variables

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     </div>
   </header>
   <section class="page-section" id="about-me">
-    <header class="about-me-header">
-      <h1 class="section-title">About Me:</h1>
-    </header>
+    <h1 class="section-title">About Me:</h1>
     <div class="about-me-container">
       <img class="about-me-image" src="/public/images/img_profile.png" alt="profile image">
       <div class="about-me-external-links-container" class="about-me-container">
@@ -135,7 +133,7 @@
       </div>
     </div>
   </section>
-  <section class="page-section" id="portfolio">
+  <!-- <section class="page-section" id="portfolio">
     <header class="portfolio-header">
       <h1>Portfolio:</h1>
     </header>
@@ -474,6 +472,6 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </body>
 </html>
