--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img class="hamburger-menu" src="public/images/menu.svg">
     </div>
   </nav>
-  <header class="page-section" id="home">
+  <header id="home">
     <div class="header-container">
       <h1 class="head-title">Hi my name is <b>Viktor Alvar</b></h1>
       <h3 class="head-subtitle">Full Stack Web Developer</h3>
@@ -31,104 +31,102 @@
   </header>
   <section class="page-section" id="about-me">
     <h1 class="section-title">About Me:</h1>
-    <div class="about-me-container">
-      <img class="about-me-image" src="/public/images/img_profile.png" alt="profile image">
-      <div class="about-me-external-links-container" class="about-me-container">
+    <img class="about-me-image" src="/public/images/img_profile.png" alt="profile image">
+    <div class="about-me-external-links-container" class="about-me-container">
+      <ul>
+        <li>
+          <a href="https://github.com/alvarviktor" target="_blank">
+            <img src="/public/images/icon-github-square.svg" alt="github icon">
+            <span>github.com/alvarviktor</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://linkedin.com/in/viktor-alvar" target="_blank">
+            <img src="/public/images/icon-linkedin-square.svg" alt="linkedin icon">
+            <span>linkedin.com/in/viktor-alvar</span>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:viktor.alvar@outlook.com">
+            <img src="/public/images/icon-material-email.svg" alt="email icon">
+            <span>viktor.alvar@outlook.com</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="/public/images/icon-material-location.svg" alt="location icon">
+            <span>Vancouver, British Columbia</span>
+          </a>
+        </li>
+      </ul>
+      <button class="action-button">download resume</button>
+    </div>
+    <div class="about-me-blurb" class="about-me-container">
+      <p>Hi my name is Viktor, I am a full-stack web developer who loves to create websites. From the front-end to the back-end, the process of creating and sharing websites to the world motivates me. I love working in a team and collaborating with others to reach a common goal. My curious and driven mindset helps me improve my skills as a software developer, always looking to challenge myself and learn new things.</p>
+    </div>
+    <div class="about-me-skills" class="about-me-container">
+      <div class="skills-container">
+        <h3>Programming Languages:</h3>
         <ul>
-          <li>
-            <a href="https://github.com/alvarviktor" target="_blank">
-              <img src="/public/images/icon-github-square.svg" alt="github icon">
-              <span>github.com/alvarviktor</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com/in/viktor-alvar" target="_blank">
-              <img src="/public/images/icon-linkedin-square.svg" alt="linkedin icon">
-              <span>linkedin.com/in/viktor-alvar</span>
-            </a>
-          </li>
-          <li>
-            <a href="mailto:viktor.alvar@outlook.com">
-              <img src="/public/images/icon-material-email.svg" alt="email icon">
-              <span>viktor.alvar@outlook.com</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="/public/images/icon-material-location.svg" alt="location icon">
-              <span>Vancouver, British Columbia</span>
-            </a>
-          </li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
+          <li>C</li>
+          <li>Python</li>
         </ul>
-        <button class="action-button">download resume</button>
       </div>
-      <div class="about-me-blurb" class="about-me-container">
-        <p>Hi my name is Viktor, I am a full-stack web developer who loves to create websites. From the front-end to the back-end, the process of creating and sharing websites to the world motivates me. I love working in a team and collaborating with others to reach a common goal. My curious and driven mindset helps me improve my skills as a software developer, always looking to challenge myself and learn new things.</p>
+      <div class="skills-container">
+        <h3>Tools/Frameworks:</h3>
+        <ul>
+          <li>React</li>
+          <li>Node</li>
+          <li>Django</li>
+          <li>Express</li>
+          <li>MongoDB</li>
+          <li>Android</li>
+          <li>Git</li>
+        </ul>
       </div>
-      <div class="about-me-skills" class="about-me-container">
-        <div class="skills-container">
-          <h3>Programming Languages:</h3>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>Python</li>
-          </ul>
+      <div></div>
+    </div>
+    <div class="about-me-experience">
+      <h2>Experience</h2>
+      <div class="experience-purposely">
+        <div class="">
+          <h3>Purposely</h3>
+          <h4>Software Developer Intern</h4>
         </div>
-        <div class="skills-container">
-          <h3>Tools/Frameworks:</h3>
-          <ul>
-            <li>React</li>
-            <li>Node</li>
-            <li>Django</li>
-            <li>Express</li>
-            <li>MongoDB</li>
-            <li>Android</li>
-            <li>Git</li>
-          </ul>
+        <div>
+          <h4>Burnaby, BC</h4>
+          <h4>April 2019 - May 2019</h4>
         </div>
-        <div></div>
+        <ul>
+          <li>Joined a small startup with a team of four students as part of a school project practicum</li>
+          <li>Redeveloped an existing event management feature to be more user-friendly using React</li>
+          <li>Imporved the efficiency and workflow for event coordiniators on the platform by displaying a lost of volunteer applications that they can accept with  single click</li>
+        </ul>
       </div>
-      <div class="about-me-experience">
-        <h2>Experience</h2>
-        <div class="experience-purposely">
-          <div class="">
-            <h3>Purposely</h3>
-            <h4>Software Developer Intern</h4>
-          </div>
-          <div>
-            <h4>Burnaby, BC</h4>
-            <h4>April 2019 - May 2019</h4>
-          </div>
-          <ul>
-            <li>Joined a small startup with a team of four students as part of a school project practicum</li>
-            <li>Redeveloped an existing event management feature to be more user-friendly using React</li>
-            <li>Imporved the efficiency and workflow for event coordiniators on the platform by displaying a lost of volunteer applications that they can accept with  single click</li>
-          </ul>
+    </div>
+    <div class="about-me-education">
+      <h2>Education</h2>
+      <div class="education-bcit">
+        <div>
+          <h3>British Columbia Institute of Technology</h3>
+          <h3>Computer Systems Technology Diploma</h3>
+        </div>
+        <div>
+          <h4>Burnaby, BC</h4>
+          <h4>September 2017 - May 2019</h4>
         </div>
       </div>
-      <div class="about-me-education">
-        <h2>Education</h2>
-        <div class="education-bcit">
-          <div>
-            <h3>British Columbia Institute of Technology</h3>
-            <h3>Computer Systems Technology Diploma</h3>
-          </div>
-          <div>
-            <h4>Burnaby, BC</h4>
-            <h4>September 2017 - May 2019</h4>
-          </div>
+      <div class="education-kwantlenpark">
+        <div>
+          <h3>Kwantlen Park Secondary School</h3>
         </div>
-        <div class="education-kwantlenpark">
-          <div>
-            <h3>Kwantlen Park Secondary School</h3>
-          </div>
-          <div>
-            <h4>Surrey, BC</h4>
-            <h4>September 2012 - June 2017</h4>
-          </div>
+        <div>
+          <h4>Surrey, BC</h4>
+          <h4>September 2012 - June 2017</h4>
         </div>
       </div>
     </div>
