updated grid links

--- a/index.html
+++ b/index.html
@@ -33,32 +33,16 @@
     <h1 class="section-title">About Me:</h1>
     <img class="about-me-image" src="/public/images/img_profile.png" alt="profile image">
     <div class="about-me-external-links-container" class="about-me-container">
-      <ul>
-        <li>
-          <a href="https://github.com/alvarviktor" target="_blank">
-            <img src="/public/images/icon-github-square.svg" alt="github icon">
-            <span>github.com/alvarviktor</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://linkedin.com/in/viktor-alvar" target="_blank">
-            <img src="/public/images/icon-linkedin-square.svg" alt="linkedin icon">
-            <span>linkedin.com/in/viktor-alvar</span>
-          </a>
-        </li>
-        <li>
-          <a href="mailto:viktor.alvar@outlook.com">
-            <img src="/public/images/icon-material-email.svg" alt="email icon">
-            <span>viktor.alvar@outlook.com</span>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="/public/images/icon-material-location.svg" alt="location icon">
-            <span>Vancouver, British Columbia</span>
-          </a>
-        </li>
-      </ul>
+      <div class="links-grid">
+        <img src="/public/images/icon-github-square.svg" alt="github icon">
+        <a href="https://github.com/alvarviktor" target="_blank">github.com/alvarviktor</a>
+        <img src="/public/images/icon-linkedin-square.svg" alt="linkedin icon">
+        <a href="https://linkedin.com/in/viktor-alvar" target="_blank">linkedin.com/in/viktor-alvar</a>
+        <img src="/public/images/icon-material-email.svg" alt="email icon">
+        <a href="mailto:viktor.alvar@outlook.com">viktor.alvar@outlook.com</a>
+        <img src="/public/images/icon-material-location.svg" alt="location icon">
+        <span>Vancouver, British Columbia</span>
+      </div>
       <button class="action-button">download resume</button>
     </div>
     <div class="about-me-blurb" class="about-me-container">
