updated box shadow colours

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <button class="action-button">download resume</button>
       </div>
     </div>
-    <div class="about-me-blurb" class="about-me-container">
+    <div class="about-me-blurb about-me-container">
       <p>Hi my name is Viktor, I am a full-stack web developer who loves to create websites. From the front-end to the back-end, the process of creating and sharing websites to the world motivates me. I love working in a team and collaborating with others to reach a common goal. My curious and driven mindset helps me improve my skills as a software developer, always looking to challenge myself and learn new things.</p>
     </div>
-    <div class="about-me-skills" class="about-me-container">
+    <div class="about-me-skills about-me-container">
       <div class="skills-container">
         <h3>Programming Languages:</h3>
         <ul>
