updated education and experience section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
     </div>
     <div class="about-me-experience">
       <h2>Experience</h2>
-      <div class="experience-purposely">
-        <div class="">
+      <div class="experience-container">
+        <div class="experience-header">
           <h3>Purposely</h3>
           <h4>Software Developer Intern</h4>
         </div>
-        <div>
+        <div class="experience-sub-header">
           <h4>Burnaby, BC</h4>
           <h4>April 2019 - May 2019</h4>
         </div>
@@ -94,7 +94,7 @@
     </div>
     <div class="about-me-education">
       <h2>Education</h2>
-      <div class="education-bcit">
+      <div class="education-container">
         <div>
           <h3>British Columbia Institute of Technology</h3>
           <h3>Computer Systems Technology Diploma</h3>
