--- a/index.html
+++ b/index.html
@@ -94,23 +94,25 @@
     </div>
     <div class="about-me-education">
       <h2>Education</h2>
-      <div class="education-container">
-        <div>
-          <h3>British Columbia Institute of Technology</h3>
-          <h3>Computer Systems Technology Diploma</h3>
+      <div class="education-flex-container">
+        <div class="education-container">
+          <div class="education-header">
+            <h3>British Columbia Institute of Technology</h3>
+            <h4>Computer Systems Technology Diploma</h4>
+          </div>
+          <div class="education-sub-header">
+            <h4>Burnaby, BC</h4>
+            <h4>September 2017 - May 2019</h4>
+          </div>
         </div>
-        <div>
-          <h4>Burnaby, BC</h4>
-          <h4>September 2017 - May 2019</h4>
-        </div>
-      </div>
-      <div class="education-kwantlenpark">
-        <div>
-          <h3>Kwantlen Park Secondary School</h3>
-        </div>
-        <div>
-          <h4>Surrey, BC</h4>
-          <h4>September 2012 - June 2017</h4>
+        <div class="education-container">
+          <div class="education-header">
+            <h3>Kwantlen Park Secondary School</h3>
+          </div>
+          <div class="education-sub-header">
+            <h4>Surrey, BC</h4>
+            <h4>September 2012 - June 2017</h4>
+          </div>
         </div>
       </div>
     </div>
