added styling to portfolio section nav bar

--- a/index.html
+++ b/index.html
@@ -117,11 +117,16 @@
       </div>
     </div>
   </section>
-  <!-- <section class="page-section" id="portfolio">
-    <header class="portfolio-header">
-      <h1>Portfolio:</h1>
-    </header>
-    <nav class="portfolio-nav"></nav>
+  <section class="page-section" id="portfolio">
+    <h1 class="section-title">Portfolio:</h1>
+    <nav class="portfolio-nav">
+      <ul>
+        <li>ALL</li>
+        <li>Mobile</li>
+        <li>Website</li>
+        <li>Desktop</li>
+      </ul>
+    </nav>
     <div class="portfolio-container">
       <div class="portolio-project-container happy-days">
         <h2 class="project-title">Happy Days</h2>
@@ -237,7 +242,7 @@
       </div>
     </div>
   </section>
-  <section class="page-section" id="portfolio-modals">
+  <!-- <section class="page-section" id="portfolio-modals">
     <div class="modal">
       <div class="modal-container">
         <a href=""><svg>close_button</svg></a>
