added styling and icons to portfolio project cards

--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
       </ul>
     </nav>
     <div class="portfolio-container">
-      <div class="portolio-project-container happy-days">
+      <div class="portfolio-project-container happy-days">
         <h2 class="project-title">Happy Days</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           An android application that promotes a healthy lifestyle for the citizens of New Westminster. The app accomplishes this by providing users with the ability to log their days in order to look back at the "Happy Days" when they are feeling down
         </p>
@@ -142,12 +144,16 @@
           </div>
         </div>
         <div class="external-links">
-          <a href="https://github.com/KiaanCastillo/Happy-Days">GitHub Icon</a>
+          <a href="https://github.com/KiaanCastillo/Happy-Days">
+            <img src="/public/images/external-links-github.svg" alt="github icon">
+          </a>
         </div>
       </div>
-      <div class="portolio-project-container freshfridge">
+      <div class="portfolio-project-container freshfridge">
         <h2 class="project-title">FreshFridge</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           A mobile responsive web application built using Node/Express that aims to reduce food waste by allowing users to search recipes based on the food ingredients that are about to expire in their fridge.
         </p>
@@ -162,13 +168,19 @@
           </div>
         </div>
         <div class="external-links">
-          <a href="https://freshfridge2910.herokuapp.com/">Website Icon</a>
-          <a href="https://github.com/AmyHong0502/FreshFridge">GitHub Icon</a>
+          <a href="https://freshfridge2910.herokuapp.com/">
+            <img src="/public/images/external-links-hostlink.svg" alt="github icon">
+          </a>
+          <a href="https://github.com/AmyHong0502/FreshFridge">
+            <img src="/public/images/external-links-github.svg" alt="github icon">
+          </a>
         </div>
       </div>
-      <div class="portolio-project-container android-gps">
+      <div class="portfolio-project-container android-gps">
         <h2 class="project-title">Android GPS</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           An android application that aims to demonstrate how network programming works in Java and also experiment with the AndroidSDK and Google Maps API.
         </p>
@@ -183,12 +195,16 @@
           </div>
         </div>
         <div class="external-links">
-          <a href="https://github.com/alvarviktor/AndroidGPS">GitHub Icon</a>
+          <a href="https://github.com/alvarviktor/AndroidGPS">
+            <img src="/public/images/external-links-github.svg" alt="github icon">
+          </a>
         </div>
       </div>
-      <div class="portolio-project-container file-transfer">
+      <div class="portfolio-project-container file-transfer">
         <h2 class="project-title">File Transfer Application</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           A windows desktop application made using C++ that demonstrates the differences between TCP and UDP under various conditions. The application accompishes this by sending files of varying sizes between two computers in a LAN and collecting data such as packet loss and transfer speed.
         </p>
@@ -200,12 +216,16 @@
           </div>
         </div>
         <div class="external-links">
-          <a href="https://github.com/alvarviktor/FileTransfer-ProtocolAnalysis">GitHub Icon</a>
+          <a href="https://github.com/alvarviktor/FileTransfer-ProtocolAnalysis">
+            <img src="/public/images/external-links-github.svg" alt="github icon">
+          </a>
         </div>
       </div>
-      <div class="portolio-project-container badgebook">
+      <div class="portfolio-project-container badgebook">
         <h2 class="project-title">BadgeBook</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           A mobile friendly social media web application built using C# and ASP.NET Core that allows users to keep track of Badges they have recieved from another authenticated website built by other team members.
         </p>
@@ -223,9 +243,11 @@
         <div class="external-links">
         </div>
       </div>
-      <div class="portolio-project-container java-chess">
+      <div class="portfolio-project-container java-chess">
         <h2 class="project-title">Chess Game</h2>
-        <img src="" alt="happy-days-image" class="project-image">
+        <div class="portfolio-image-container">
+          <img src="" alt="happy-days-image" class="project-image">
+        </div>
         <p class="project-description">
           A Chess Game build using Java and the JavaFX GUI library.
         </p>
@@ -237,7 +259,9 @@
           </div>
         </div>
         <div class="external-links">
-          <a href="">GitHub Icon</a>
+          <a href="https://github.com/alvarviktor/JavaFX-ChessGame">
+            <img src="/public/images/external-links-github.svg" alt="github icon">
+          </a>
         </div>
       </div>
     </div>
